# cliente-irc

./: Cargo.toml  README.md
client/src/: data.rs  lib.rs
client/src/client/: mod.rs  utils.rs
client/src/message/: command.rs  error.rs  mod.rs  parser.rs  response.rs
resources/: chat-external-message.ui  chat-header.ui  chat-own-message.ui  chat.ui  main.ui  registration-field.ui  registration.ui  resources.gresource.xml  session.ui  style.css  window.ui
resources/old/: chat-own-message.ui  chat.ui
resources/ui/: chat.ui  message.ui  page-row.ui  password-field.ui  registration-field.ui  registration.ui  session.ui  sidebar.ui  user-page.ui
resources/ui/components/: field.ui  message.ui  password-field.ui  stack-page-label.ui
resources/ui/pages/: account.ui  chat-adder.ui
src/: application.rs  lib.rs  main.rs  registration_window.rs  utils.rs
src/application/: imp.rs  mod.rs
src/application/chat/: imp.rs  mod.rs
src/application/main_window/: imp.rs  mod.rs
src/application/registration_window/: imp.rs  mod.rs
src/client/: async.rs  data.rs  imp.rs  inner.rs  mod.rs  reader.rs  sender.rs  utils.rs
src/client/data/: constant.rs  imp.rs  mod.rs
src/client/message/: command.rs  (+2 more)
src/components/: mod.rs
src/gtk_client/: boxed_irc_client.rs  mod.rs  registration_data_object.rs
src/message/: command.rs  error.rs  mod.rs  parser.rs  parsing_error.rs  response.rs
src/message_/: error.rs  parser.rs  tests.rs
src/pages/: mod.rs
src/registration_window/: imp.rs  mod.rs
src/server/: mod.rs
src/widgets/: mod.rs
src/window/: imp.rs  mod.rs
(+90 files in other folders)
