[package]
name = "irc-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.6.1", package = "gtk4", features = ["v4_6"] }
strum = "0.24.1"
strum_macros = "0.24.3"

[build-dependencies]
glib-build-tools = "0.17.0"

[dependencies.async-std]
version = "1.6"
features = ["attributes"]
