[package]
name = "irc-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
automatic-login = []

[workspace]
members = [
    "client",
]

[dependencies]
gtk = { version = "0.6.1", package = "gtk4", features = ["v4_6"] }
random_name_generator = "0.3.3"
client = { path = "client" }

[build-dependencies]
glib-build-tools = "0.17.0"


